--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This example is so cool.",
   "main": "web.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   }
 }
