--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "project1",
   "version": "1.0.0",
   "description": "This example is so cool.",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node main.js"
   }
 }
